--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h1>SHOPPING CART</h1>
             <div class="products">
             <div class="product">
-                    <img src="c:\earpods.png" width="100" height="100"></img>
+                    <img src="images\earpods.png" width="100" height="100"></img>
                     <h4><i>most unique and stylish ear pods</i></h4>
                     <h2>EARPODS</h2>
                     <p>price:$100</p>
@@ -39,7 +39,7 @@
            
             
             <div class="product">
-                    <img src="c:\handbag.JPG" width="100" height="100"></img>
+                    <img src="images\handbag.JPG" width="100" height="100"></img>
                     <h4><i>beautiful elegance and luxury green hand bag</i></h4>
                     <h2>HANDBAG</h2>
                     <p>price:$150</p>
