--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
            
             
             <div class="product">
-                    <img src="images\handbag.JPG" width="100" height="100"></img>
+                    <img src="images\handbag.jpg" width="100" height="100"></img>
                     <h4><i>beautiful elegance and luxury green hand bag</i></h4>
                     <h2>HANDBAG</h2>
                     <p>price:$150</p>
